--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-
 spring.application.name=demo
 # Don't change the port
-server.port = 9002
+server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/transport_pro?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sac?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format-sql=true
+spring.api.database-platform=org.hibernate.dialect.MySQL8Dialect
